# TextPracticing

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: index.html  panel.css  style-err.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  command_error.rs  example-file.txt  logger.rs  main.rs  practicing_file.rs  regex
src/scripts/: for_tauri.ts  general_panels.js  html_elements.ts  main.ts  tauri.js  tauri_calls.ts
src/scripts_ts/: dark_mode.js  for_tauri.ts  general_panels.js  html_elements.ts  main.ts  tauri.js  tauri_calls.ts  tauri_module.js
