[package]
authors = ["https://github.com/LimitLost"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "text-practicing"
repository = ""
rust-version = "1.57"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = []}

[dependencies]

lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.4"

# Saving Last Configuration And Cache
ron = "0.8.1"

# Logging and error handling
anyhow = "1.0.80"
log = "0.4.21"
log4rs = "1.3.0"

# Tauri and Serialization/Deserialization of structs
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.2", features = ["shell-open", "dialog-open"]}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
